sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:7: error: lgr is already defined as variable lgr
  var lgr:Int = getNombreValeurs()
      ^